trying to stop front page banner from getting cropped

--- a/fedoracommunity/public/css/myfedora-branding.css
+++ b/fedoracommunity/public/css/myfedora-branding.css
@@ -10,6 +10,10 @@ div#head h1 a {
         padding-left: 5px;
 }
 
+img#main-banner {
+	min-height: 199px;
+}
+
 .col-spread h4 {
   font-size: large;
   font-weight: normal;
